--- a/style.css
+++ b/style.css
@@ -1,49 +1,37 @@
-body {
-  color: lightslategray;
-}
 
 blockquote {
-  background-color: rgba(0, 12, 24, 0.05);
+	background-color: rgba(0, 0, 0, .12);
+	padding: 8px;
+}
+
+blockquote::before{
+	content: '"';
+}
+
+blockquote::after{
+	content: '"';
 }
 
 a {
-  border: 1px dashed red;
+	color: darkred;
+	text-decoration: none;
 }
 
-em {
-  color: darkred;
+a:hover{
+	color: black;
+	text-decoration: none;
 }
 
-.variant-em {
-  background-color: greenyellow;
-  color: black;
-  font-weight: bold;
-  font-style: inherit;
+a:link{
+	color: purple;
+	text-decoration: none;
 }
 
-ul {
-  background-color: unset;
-}
-
-ul li {
-  padding: 16px;
-}
-
-.link1 {
-  color: inherit;
-  padding: inherit;
-}
-
-.link2 {
-  color: initial;
-  padding: initial;
-}
-
-.link3 {
-  color: unset;
-  padding: unset;
-}
-
-.content1 p {
-  border: 1px solid black;
+p::first-letter{
+    float: left;
+    color: darkred;
+    border: 3px ridge darkgoldenrod;
+    padding: 16px;
+    background-color: gold;
+    margin: 8px;
 }
