--- a/style.css
+++ b/style.css
@@ -1,37 +1,49 @@
+body {
+  color: lightslategray;
+}
 
 blockquote {
-	background-color: rgba(0, 0, 0, .12);
-	padding: 8px;
-}
-
-blockquote::before{
-	content: '"';
-}
-
-blockquote::after{
-	content: '"';
+  background-color: rgba(0, 12, 24, 0.05);
 }
 
 a {
-	color: darkred;
-	text-decoration: none;
+  border: 1px dashed red;
 }
 
-a:hover{
-	color: black;
-	text-decoration: none;
+em {
+  color: darkred;
 }
 
-a:link{
-	color: purple;
-	text-decoration: none;
+.variant-em {
+  background-color: greenyellow;
+  color: black;
+  font-weight: bold;
+  font-style: inherit;
 }
 
-p::first-letter{
-    float: left;
-    color: darkred;
-    border: 3px ridge darkgoldenrod;
-    padding: 16px;
-    background-color: gold;
-    margin: 8px;
+ul {
+  background-color: unset;
+}
+
+ul li {
+  padding: 16px;
+}
+
+.link1 {
+  color: inherit;
+  padding: inherit;
+}
+
+.link2 {
+  color: initial;
+  padding: initial;
+}
+
+.link3 {
+  color: unset;
+  padding: unset;
+}
+
+.content1 p {
+  border: 1px solid #000; /* Puoi modificare il colore e lo spessore del bordo come preferisci */
 }
