--- a/cascata.css
+++ b/cascata.css
@@ -45,5 +45,5 @@ ul li {
 }
 
 .content1 p {
-  border: 1px solid #000; /* Puoi modificare il colore e lo spessore del bordo come preferisci */
+  border: 1px solid #000; 
 }
